--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,11 @@
   font-family: "Poppins", "sans-serif";
 }
 
+body {
+  background-color: #1a1a1a;
+  color: white;
+}
+
 .user-profile {
   display: flex;
   align-items: flex-start;
@@ -13,6 +18,8 @@
   max-width: 80em;
   min-width: 290px;
   margin: 0 auto;
+  background-color: #1a1a1a;
+  color: white;
 }
 
 .navbar {
@@ -20,17 +27,20 @@
   width: 100%;
   justify-content: center;
   border-bottom: 1px solid #979797;
+  background-color: #1a1a1a;
+  color: white;
 }
 
 .nav-item {
   text-decoration: none;
-  color: black;
+  color: white;
   padding: 1rem;
 }
 
 .nav-tab:hover{
   transition: 0.3s;
   background-color: #e7e7e7;
+  color: black;
 }
 
 .sidebar {
