--- a/src/index.css
+++ b/src/index.css
@@ -39,8 +39,7 @@ body {
 
 .nav-tab:hover{
   transition: 0.3s;
-  background-color: #e7e7e7;
-  color: black;
+  background-color: #474747;
 }
 
 .sidebar {
@@ -77,7 +76,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border: 2px solid #4288c2;
+  border: 2px solid #696c6e;
   padding: 0.5rem;
   margin: 0.5rem;
   border-radius: 4px;
@@ -85,6 +84,7 @@ body {
 
 .poll-item:hover {
   transition: 0.3s;
-  background-color: #87c4e0;
+  background-color: #474747;
+  border-color: white;
   color: white;
 }
