--- a/src/index.css
+++ b/src/index.css
@@ -41,8 +41,10 @@ body {
   width: 100%;
   justify-content: center;
   border-bottom: 1px solid #979797;
+  margin-bottom: 0.5rem;
   background-color: #1a1a1a;
   color: white;
+  box-shadow: 2px 2px 2px 1px #ffffff22;
 }
 
 .nav-item {
@@ -170,4 +172,9 @@ body {
   padding: 0.2rem;
   font-size: 16px;
   margin: 1rem auto;
+}
+
+.create-poll-btn:hover {
+  transition: 0.3s;
+  transform: scale(1.05);
 }
