css fix to add space at the bottom of the page

--- a/src/index.css
+++ b/src/index.css
@@ -70,11 +70,11 @@ body {
 }
 
 .polls {
-  max-height: 90vh;
   width: 100%;
   display: flex;
   justify-content: stretch;
   flex-direction: column;
+  padding-bottom: 1rem;
 }
 
 .poll {
